--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
+#token.secretKey=
+#token.expirationTime=
