zmiana bazy z postgre na mysql

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=PyszneGloEats
-spring.datasource.url=jdbc:postgresql://serwer2492574.home.pl:5432/38960054_pysznegloeats
-spring.datasource.username=38960054_pysznegloeats
-***REMOVED***
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
-spring.jpa.show-sql=true
+spring.application.name=Spring002
 spring.jpa.hibernate.ddl-auto=update
+***REMOVED***
+***REMOVED***
+***REMOVED***
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
 #token.secretKey=
 #token.expirationTime=
