dodanie funkcji wysyłania maila i optymalizacja pobierania zdjęć

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 #token.secretKey=
 #token.expirationTime=
+
+spring.mail.host=serwer2492574.home.pl
+spring.mail.port=465
+***REMOVED***
+***REMOVED***
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.port=465
