--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - '80:80'
     depends_on:
       - backend
+    networks:
+      - my-network
 
   backend:
     build:
@@ -16,10 +18,15 @@ services:
       - ***REMOVED***
       - ***REMOVED***
       - ***REMOVED***
+      - spring.rabbitmq.host=rabbitmq
+      - ***REMOVED***
     ports:
       - '8080:8080'
     depends_on:
       - db
+      - rabbitmq
+    networks:
+      - my-network
 
   db:
     image: mysql:8.0
@@ -30,6 +37,17 @@ services:
       - '3307:3306'
     volumes:
       - mysql-data:/var/lib/mysql
+    networks:
+      - my-network
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
     networks:
       - my-network
 
