przeniesienie url do pliku env, implementacja dockera do chmury, poprawa zabezpieczeń

--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -1,3 +1,26 @@
+# server {
+#     listen 80;
+#     server_name localhost;
+
+#     root /usr/share/nginx/html;
+#     index index.html;
+
+#     # Obsługa tras SPA
+#     location / {
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     # Proxy dla API
+#     location /api/ {
+#         proxy_pass http://backend:8080/;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+
+# }
 server {
     listen 80;
     server_name localhost;
@@ -5,19 +28,15 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Obsługa tras SPA
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    # Proxy dla API
-    location /api/ {
-        proxy_pass http://backend:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-
+    # Jeśli masz endpoint /api/ do backendu, to może wyglądać to tak:
+    # location /api/ {
+    #     proxy_pass https://backend-production-25d0.up.railway.app;
+    #     proxy_ssl_server_name on;
+    #     proxy_ssl_name backend-production-25d0.up.railway.app;
+    #     proxy_set_header Host backend-production-25d0.up.railway.app;
+    # }
 }
