--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,12 @@
-FROM openjdk:21
+FROM maven:3.9.4-eclipse-temurin-21 AS builder
 WORKDIR /app
-COPY target/backend-0.0.1-SNAPSHOT.jar app.jar
+COPY pom.xml .
+RUN mvn dependency:go-offline
+COPY src/ src/
+RUN mvn clean package -DskipTests
+
+FROM eclipse-temurin:21-jdk
+WORKDIR /app
+COPY --from=builder /app/target/backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
