--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.port=465
 
-spring.rabbitmq.host=localhost
+#spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq-production-4d3b.up.railway.app
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
