--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@railway/cli": "^3.19.1",
     "@stomp/stompjs": "^7.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -26,6 +27,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "dotenv": "^16.4.7",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
