--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.jpa.hibernate.ddl-auto=update
 ***REMOVED***
 ***REMOVED***
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-#token.secretKey=
-#token.expirationTime=
+spring.jpa.show-sql:true
+***REMOVED***
+token.EXPIRATION_TIME=172800000
 
 spring.mail.host=serwer2492574.home.pl
 spring.mail.port=465
@@ -17,8 +17,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.port=465
 
-#spring.rabbitmq.host=localhost
-spring.rabbitmq.host=rabbitmq-production-4d3b.up.railway.app
+
+***REMOVED***
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
