--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 ***REMOVED***
 ***REMOVED***
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql:true
+spring.jpa.show-sql=true
 ***REMOVED***
 token.EXPIRATION_TIME=172800000
 
